# simple-traffic-simulator

./: CMakeLists.txt  building.cpp  building.h  car.cpp  car.h  city.cpp  city.h  drawable.h  intersection.cpp  intersection.h  main.cpp  positional.cpp  positional.h  resizableArray.h  settings.cpp  settings.h  simpleRandom.cpp  simpleRandom.h  street.cpp  street.h  windowLogic.cpp  windowLogic.h
